	PR fortran/24748 	* primary.c (gfc_match_rvalue): Don't call match_substring for 	implicit non-character types.

PR fortran/24748
	* gfortran.dg/implicit_8.f90: New.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@114901 138bc75d-0d04-0410-961f-82ee72b054a4